# filamentseek-backend

./: .gitignore  Cargo.toml  Rocket.toml
src/: generic.rs  main.rs  web.rs
src/models/: mod.rs  product.rs  session.rs  user.rs
src/routes/: bootstrap_admin.rs  mod.rs  openapi.rs  products.rs  token.rs  users.rs
