[package]
name = "filamentseek-backend"
version = "0.1.0"
authors = ["Jason <jason@elg.gg>"]
edition = "2024"
repository = "https://github.com/FilamentSeek/filamentseek-backend"

[dependencies]
surreal_socket = { path = "../surrealsocket" }
filamentseek-model = { path = "../filamentseek-model" }
rocket = { version = "0.5.1", features = ["tls", "json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.221"
serde_json = "1.0.144"
chrono = "0.4.42"
log = "0.4.28"
confy = "1.0.0"
utoipa = "5.4.0"
utoipa-rapidoc = "6.0.0"
argon2 = "0.5.3"
password-hash = "0.5.0"
async-trait = "0.1.89"
surrealdb = "2.2.1"
jsonwebtoken = "9.3.1"
subtle = "2.6.1"
email_address = "0.2.9"
env_logger = "0.11.8"
fuzzy-matcher = "0.3.7"
rocket_cors = "0.6.0"
